# Interview

./: github-recovery-codes.txt  hw.ipynb  lovelyh.pem  nginx.txt  token.txt  zy.docx  ~$zy.docx  配置文件.yaml.txt
CS240/HW3/: main.tex
CS240/HW3/__MACOSX/: ._main.tex
CS240/HW4/: hw4.tex
CS240/课件/: Idea Evaluation.pptx
CS280-作业/CS280-Fall23-Assignment1/: README.md
CS280-作业/CS280-Fall23-Assignment1/Homework1_partA/: homework1.tex
CS280-作业/CS280-Fall23-Assignment1/Homework1_partB/: README.md  assignment1.md  build.bat  collectSubmission.sh  features.ipynb  knn.ipynb  makepdf.py  perceptron.ipynb  setup.md  softmax.ipynb  svm.ipynb  two_layer_net.ipynb
CS280-作业/CS280-Fall23-Assignment3/CS280-Fall23-Assignment3/: Generative_Adversarial_Networks_PyTorch.ipynb  README.md  StyleTransfer-PyTorch.ipynb
CS280-作业/backup/CS280-Fall23-Assignment3/: Generative_Adversarial_Networks_PyTorch.ipynb  (+1 more)
CS280-作业/project/: A_resultsAignore_by_default.csv  C.ipynb  CreateMatrix.ipynb  draw2.py  main.py  model1.pkl  model_Bfollow_closely.pkl  model_Brecording_10-08_41_overtake_behind.json.pkl  model_FSGNN_recording_10-08_41_overtake_behind.pkl  npy_mini.json  output.csv  output_A1.csv  output_A2.csv  run_FSGNN.ipynb  run_FSGNN.py  run_SAM copy.ipynb  run_SAM.ipynb  run_script.py
DSP-作业/: HW4.m  matlab作业.docx
interview-knowledge-English-version/: README.md
interview-knowledge-English-version/Algorithm Engineer/: DeepLearning.md
interview-knowledge-English-version/C++/: Knowledge.md  Nowcoder.md  terminology.md
interview-knowledge-English-version/Data Structure/: Nowcoder.md  terminology.md
interview-knowledge-English-version/git/: Chapter 01 Getting Started.md
interview-knowledge-English-version/questions/: Huawei.md  Interview.md
matrix computation/: hw1.tex
other_hw/: js20110218刘雨蘅一稿.doc  js20110218刘雨蘅一稿.wps  main.py  main2.py
slam/hw1/: CMakeLists.txt
slam/hw1/script/: plot.py
slam/hw1/source/: hello_g2o.txt  hw1_data.txt  hw1_result.txt  hw1_result_opt.txt  hw1_result_original.txt
slam/hw1/src/: generate_Quaternion.cpp  question3_4.cpp  question_2.cpp
论文写作-作业/: Homework template(1).docx  Homework template(2).docx  Homework template(3).docx
高数助教作业/: gc_GEMA1001-101444-4503-2023-20241_svdownload_2024-01-04-17-40-10.xls  gc_GEMA1001-101444-4503-2023-20241_svdownload_2024-01-11-23-28-36.xls
(+1386 files in other folders)
